# email-archiver

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.warp-env  Makefile  OVERVIEW.md  PLAN.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: docker-compose.yml
docker/test-compose/: .env  README.md  docker-compose.yml
docker/test-compose/config/: notmuch-config
docker/test-compose/config/email-archiver/: config.toml
docker/test-compose/config/isync/: mbsyncrc
docker/test-compose/secrets/: imap_password
docs/: AGENTS.md  CLAUDE.md  PLAN.md  SPEC.md  TESTING.md
examples/: config.toml  mbsyncrc  notmuch-config
scripts/: scheduler.sh
src/email_archiver/: __init__.py  cli.py  config.py  generate.py  runner.py
src/email_archiver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/email_archiver/commands/: __init__.py  backup.py  doctor.py  index.py  run.py  sync.py  verify.py
systemd/: email-archiver-run.service  email-archiver-run.timer
tests/: test_cli.py  test_config.py  test_generate.py  test_runner.py  test_verify.py
